--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test"
   },
   "dependencies": {
     "@react-three/drei": "^9.108.1",
