--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test"
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/drei": "^9.108.1",
